<resources>
    <string name="app_name">MyFlexibleFragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_home_fragment">Hello, ini Home Fragment</string>
    <string name="to_category">Ke Halaman Profile Activity</string>
    <string name="this_category">Ini Fragment Kategori</string>
    <string name="category_lifestyle">Ke Fragment Lifestyle</string>
    <string name="category_name">Nama Kategori</string>
    <string name="category_description">Deskripsi Kategori</string>
    <string name="to_profile">Ke Halaman Profile Activity</string>
    <string name="show_doalog">Tampilkan sebuah dialog</string>
    <string name="question_coach">Siapa pelatih tersukses FC BARCELONA</string>
    <string name="guardiola">Pep Guardiola</string>
    <string name="cruyff">Johan Cruyff</string>
    <string name="enrique">Luis Enrique</string>
    <string name="rijkaard">Frank Rijkaard</string>
    <string name="choose">Pilih</string>
    <string name="close">Tutup</string>
    <string name="this_profile">Ini Activity Profile</string>

</resources>